--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@mipmap/fondo2"
+        android:alpha="0.4" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +29,7 @@ tools:context=".MainActivity">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="273dp" />
+            app:layout_constraintGuide_begin="250dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -52,26 +64,28 @@ tools:context=".MainActivity">
             android:id="@+id/imageView3"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.894"
+            app:layout_constraintVertical_bias="0.584"
             app:srcCompat="@drawable/ista" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginTop="100dp"
+            android:layout_margin="80dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="49dp"
             android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/btninicio"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/guideline1"
-            android:layout_margin="80dp">
+            app:layout_constraintTop_toTopOf="@+id/guideline1">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_input_layout_email"
@@ -79,7 +93,8 @@ tools:context=".MainActivity">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:hint="User Name"
+                android:hint="@string/txt_userName"
+                android:textStyle="bold"
                 app:expandedHintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -96,7 +111,7 @@ tools:context=".MainActivity">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:hint="pasword"
+                android:hint="@string/txt_password"
                 app:expandedHintEnabled="false"
                 app:passwordToggleEnabled="true">
 
@@ -123,10 +138,11 @@ tools:context=".MainActivity">
             android:id="@+id/btninicio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="inicio"
+            android:text="@string/txt_login"
             app:layout_constraintBottom_toTopOf="@+id/btndatos"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline3" />
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:backgroundTint="#004f9f"/>
 
         <Button
             android:id="@+id/btndatos"
@@ -136,7 +152,8 @@ tools:context=".MainActivity">
             android:text="cargar datos temporales"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintBottom_toTopOf="@+id/guideline5" />
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:backgroundTint="#004f9f"/>
 
         <TextView
             android:id="@+id/textView"
@@ -149,3 +166,4 @@ tools:context=".MainActivity">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
+</RelativeLayout>
