--- a/app/src/main/res/layout/list_asistencia.xml
+++ b/app/src/main/res/layout/list_asistencia.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="25dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="2dp">
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/imgasistencia"
@@ -32,7 +33,7 @@
                 android:padding="14dp"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
-                app:srcCompat="@drawable/ista"/>
+                app:srcCompat="@drawable/ista" />
 
             <LinearLayout
                 android:id="@+id/linerTextUbicacionEdificio"
@@ -72,25 +73,31 @@
                         android:id="@+id/btnasisteasistencia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:text="Button"
-                        android:layout_margin="5dp"/>
+                        android:text="@string/txt_btnAsiste"
+                        android:textSize="10dp"
+                        app:backgroundTint="#136A16" />
 
                     <Button
                         android:id="@+id/btnnoasisteasistencia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:text="Button"
-                        android:layout_margin="5dp"/>
+                        android:text="@string/txt_btnNoAsiste"
+                        android:textSize="10dp"
+                        app:backgroundTint="#F44336" />
 
                     <Button
                         android:id="@+id/btnobservacionesasistencia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:text="Button"
-                        android:layout_margin="5dp"/>
+                        android:text="@string/txt_btnObservaciones"
+                        android:textSize="8dp"
+                        app:backgroundTint="#FFC107" />
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
