--- a/app/src/main/res/layout/list_programas.xml
+++ b/app/src/main/res/layout/list_programas.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="2dp">
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/imgprograma"
